--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+.drawer-side a.active {
+    color: red;
+    background-color: transparent !important;
+  }
+  
+  .drawer-side a:hover {
+    background-color: transparent;
+  }
